--- a/animals.html
+++ b/animals.html
@@ -20,18 +20,18 @@
     <h1>Top 3 Favorite Animals:</h1>
     <p>This page is dedicated to my favorite animals</p>
   </section>
-  <section class="animals">
+ <section class="animals">
     <h2>The Lion:</h2>
     <p>The Lion is a really fast, brave animal. The thing I like about the Lion is its ferocity and its braveness to hunt bigger animals. The Lion reminds me of a mentality that is a champion, work with what you have and strive to get better.</p>
     <div>
-      <img src="images/lion.jpg" alt="A beautiful Lion In The Wild">
+      <img src="images/lion.jpg" alt="A beautiful Lion In The Wild" id="lion">
     </div>
   </section>
   <section class="animals">
     <h2>Goldfish:</h2>
     <p>The Goldfish will always be sentimental to me because it was my first pet. I really was able to see close up on how they swim, the way they shed skin, and my favorite part as they got bigger was when the goldfish would jump up in the air and back into the tank.</p>
     <div>
-      <img src="images/goldfish.jpg" alt="An Orange Goldfish">
+      <img src="images/goldfish.jpg" alt="An Orange Goldfish" id="goldfish">
     </div>
   </section>
   <section class="animals">
