--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </nav>
   </header>
   <section class="resume">
-    <h1>Resume/Contact Information:</h1>
-    <p>Name: Rayyan B.| Email: rbasathia@hawk.iit.edu |</p>
+    <div class="fixed-width">
+      <h1>Resume/Contact Information:</h1>
+      <p>Name: Rayyan B.| Email: rbasathia@hawk.iit.edu |</p>
+    </div>
   </section>
   <section class="resume">
     <h2>Education:</h2>
@@ -55,6 +57,6 @@
     <h2>Skills And Interests:</h2>
     <p>Microsoft Office, Word, Excel, PowerPoint, Python.</p>
   </section>
-  <section class="resume">
 </body>
 </html>
+
