--- a/tombrady.html
+++ b/tombrady.html
@@ -23,7 +23,7 @@
   <section class="Brady">
     <h2>Tom Brady's Tough Football Career:</h2>
     <div>
-      <img src="images/tombrady1.jpg" alt="Tom Brady Playing At Michigan">
+      <img src="images/tombrady1.jpg" alt="Tom Brady Playing At Michigan" id="tombrady1">
     </div>
     <p>Tom Brady is known as the greatest football player to ever play the game, but it was not an easy task for him. At Michigan, he was the 7th backup quarterback on the roster and he was given a full ride, but had to work daily with great consistency. After three years, Tom Brady was named the starter for Michigan. After that, he tried out for the NFL and was drafted by the Patriots, in which he was the Third-String Quarterback and after taking the opportunity and not letting it slip, he became the starter backup leading the Patriots to six super bowl rings.</p>
   </section>
@@ -54,7 +54,7 @@
   <section class="Brady">
     <h3>Tom Brady On The Patriots:</h3>
     <div>
-      <img src="images/tombrady2.jpg" alt="Tom Brady On The Patriots">
+      <img src="images/tombrady2.jpg" alt="Tom Brady On The Patriots" id="tombrady2">
     </div>
   </section>
   <section class="Brady">
